--- a/pom.xml
+++ b/pom.xml
@@ -50,6 +50,10 @@
             <artifactId>spring-data-rest-webmvc</artifactId>
             <version>3.6.7</version>
         </dependency>
+        <dependency>
+            <groupId>org.springframework.boot</groupId>
+            <artifactId>spring-boot-starter-hateoas</artifactId>
+        </dependency>
     </dependencies>
 
     <build>
